<resources>
    <string name="app_name">QuizApp</string>
    <string name="three">3. Which of the following are programming languages   (Check all that apply)</string>
    <string name="two">2. Mobile apps can either be Native or</string>
    <string name="one">1. Which of the following is not a python ibrary:</string>
    <string name="keras">Keras</string>
    <string name="scikit_learn">Scikit Learn</string>
    <string name="numpy">Numpy</string>
    <string name="swing">Swing</string>
    <string name="something">Something</string>
    <string name="rust">Rust</string>
    <string name="teren">Teren</string>
    <string name="four">4. What does ALC stand for:</string>
    <string name="application_not_responding">Application Not Responding</string>
    <string name="android_not_right">Android Not Right</string>
    <string name="america_not_raining">America Not Raining</string>
    <string name="android_not_resting">Android Not Resting</string>
    <string name="in_android_development_anr_stands_for">In android development, ANR stands for?</string>
    <string name="_1">1.</string>
    <string name="_2">2.</string>
    <string name="which_of_the_following_are_programming_languages_n_check_all_that_apply">Which of the following are programming languages?   (Check all that apply)</string>
    <string name="elixir">Elixir</string>
    <string name="go">Go</string>
    <string name="kotlin">Kotlin</string>
    <string name="english">English</string>
    <string name="_3">3.</string>
    <string name="android_apps_can_be_native_or">Android apps can be native or</string>
    <string name="type_answer_here">Type answer here</string>
    <string name="_4">4.</string>
    <string name="is_android_open_source">Is Android Open Source?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_5">5.</string>
    <string name="kotlin_is">Kotlin is?</string>
    <string name="programming_language">Programming Language</string>
    <string name="markup_language">Markup Language</string>
    <string name="submit">SUBMIT</string>
    <string name="reset">RESET</string>
    <string name="js_quiz">Which of the following is not a JavaScript framework/library?</string>
    <string name="react">React</string>
    <string name="andular">Andular</string>
    <string name="vanilla">Vanilla</string>
    <string name="nodejs">NodeJS</string>
</resources>
